--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # build output
 dist/
+.output/
+
 # generated types
 .astro/
 
@@ -8,10 +10,9 @@ node_modules/
 
 # logs
 npm-debug.log*
+pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-
 
 # environment variables
 .env
@@ -20,5 +21,13 @@ pnpm-debug.log*
 # macOS-specific files
 .DS_Store
 
-# jetbrains setting folder
+# WordPress export files
+wordpress-export.xml
+wordpress-backup/
+
+# IDE
+.vscode/
 .idea/
+*.swp
+*.swo
+*~
