--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "convert:wordpress": "node scripts/convert-wordpress.js",
+    "extract:images": "node scripts/extract-images.js",
+    "deploy:cloudflare": "pnpm build && echo 'Build complete! Upload dist/ to Cloudflare Pages'"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/cloudflare": "^12.6.9",
     "@astrojs/mdx": "^4.3.6",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.6.0",
+    "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.1",
-    "sharp": "^0.34.3"
+    "sharp": "^0.34.3",
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5.9.3"
   }
 }
